# RV-RICH-YET-Trivia-based-DSA-Game-GUI-Heavy

./: CMakeLists.txt  CMakePresets.json  README.md  data_structures.cpp  data_structures.h  data_structures.hpp  game_controller.cpp  game_controller.h  game_controller.hpp  game_engine.cpp  game_engine.h  game_engine.hpp  game_logic.h  game_logic.hpp  game_state.cpp  game_state.h  game_state.hpp  gui_main.cpp  gui_renderer.h  leaderboard.cpp  leaderboard.h  leaderboard.hpp  leaderboard.txt  main.cpp  player_profile.cpp  player_profile.h  player_profile.hpp  player_profiles.txt  question_bank.cpp  question_bank.h  question_bank.hpp  questions.txt  timer.cpp  timer.h  timer.hpp  vcpkg.json  version1.0.cpp
RV RICH YET/RV RICH YET/: CMakeLists.txt
RV RICH YET/RV RICH YET/include/: BaseFunctions.h  LifeLines.h  Prizeladder.h  Profilemanager.h  Question.h  Questionbank.h
RV RICH YET/RV RICH YET/src/: BaseFunctions.cpp  LifeLines.cpp  Prizeladder.cpp  Profilemanager.cpp  Question.cpp  Questionbank.cpp  main.cpp
RV RICH YET/docs/: leaderboard.txt  player_profiles.txt
src/: CMakeLists.txt  CMakePresets.json  app.rc  buttons.cpp  buttons.hpp  data_structures.cpp  data_structures.hpp  game_controller.cpp  game_controller.hpp  game_engine.cpp  game_engine.hpp  game_logic.cpp  game_state.cpp  game_state.hpp  leaderboard.cpp  leaderboard.hpp  main.cpp  player_profile.cpp  player_profile.hpp  question_bank.cpp  raylib_renderer.cpp  raylib_renderer.hpp  timer.cpp  timer.hpp
